--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -1,22 +1,19 @@
 <div class="card">
-    <div class="card-header">
-        Agregar empleado
-    </div>
+    <div class="card-header">Agregar empleado</div>
     <div class="card-body">
-
+        <!-- TODO: ngSubmit  -->
         <form [formGroup]="formUser" (ngSubmit)="sendData()">
-
             <div class="mb-3">
-                <label for="" class="form-label">Nombre</label>
 
-                <input type="text" class="form-control" name="" formControlName="nombre" id="" 
-                aria-describedby="helpId" placeholder="Escribe un nombre">
+                <label for="" class="form-label">Nombre</label>
+                <input type="text" class="form-control" name="" formControlName="nombre" id="" aria-describedby="helpId"
+                    placeholder="Escribe un nombre" />
             </div>
 
             <div class="mb-3">
                 <label for="" class="form-label">Correo</label>
-                <input type="email" class="form-control" name="" formControlName="correo" id="" 
-                aria-describedby="helpId" placeholder="Escribe tu Correo">
+                <input type="email" class="form-control" name="" formControlName="correo" id=""
+                    aria-describedby="helpId" placeholder="Escribe tu Correo" />
             </div>
 
             <div class="btn-group" role="group" aria-label="">
@@ -25,5 +22,4 @@
             </div>
         </form>
     </div>
-
 </div>
