--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <nav class="navbar navbar-expand navbar-light bg-light fs-5 fw-bold">
-    <div class="nav navbar-nav">
-        <a class="nav-item nav-link active" href="#" aria-current="page">Sistema <span class="visually-hidden">(current)</span></a>
-        <a class="nav-item nav-link active" routerLink="list-user"> Listar empleado</a>
-        <a class="nav-item nav-link active" routerLink="add-user"> Agregar empleado</a>
-    </div>
+  <div class="nav navbar-nav">
+    <a class="nav-item nav-link active" href="#" aria-current="page">Sistema <span
+        class="visually-hidden">(current)</span></a>
+    <a class="nav-item nav-link active" routerLink="list-user"> Listar empleado</a>
+    <a class="nav-item nav-link active" routerLink="add-user"> Agregar empleado</a>
+  </div>
 </nav>
 <div class="container">
-    Contenido
-    <router-outlet></router-outlet>
+  Contenido
+  <router-outlet></router-outlet>
 </div>
