antes de aplica estilos suegeridos

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table th {
+  text-align: center;
+  color:white;
+  padding: 0.5rem;
+  background: #1768ec;
+  border-bottom: 1px solid #e2e8f0;
+}
+
+table td {
+  text-align: center;
+  padding: 0.5rem;
+  border-bottom: 1px solid #e2e8f0;
+}
+
+table tr:hover {
+  background-color: #f7fafc;
+}
+
